// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ClientSearch renderForm should match snapshot 1`] = `
<div>
  <div>
    <Component
      flexColumn={true}
      hasBackground={true}
      hasPadding={true}
    >
      <Component>
        Client Search
      </Component>
      <Form
        className="mb-8"
      >
        <Component
          id="name"
          labelText="Search by name"
          name="name"
          placeholder="Firstname or Surname"
          type="text"
        />
        <Component
          id="address"
          labelText="Search by address"
          name="address"
          placeholder="Streetname, Village, Town or Postcode"
          type="text"
        />
        <Component
          id="identityCheck"
          labelText="Search by ID Status"
          name="identityCheck"
          options={
            Array [
              Object {
                "label": "Please select…",
                "value": "",
              },
              Object {
                "label": "Pass",
                "value": "Pass",
              },
              Object {
                "label": "Fail",
                "value": "Fail",
              },
              Object {
                "label": "Pending",
                "value": "Pending",
              },
              Object {
                "label": "Cancelled",
                "value": "Cancelled",
              },
              Object {
                "label": "Warnings",
                "value": "Warnings",
              },
              Object {
                "label": "Unchecked",
                "value": "Unchecked",
              },
            ]
          }
        />
        <Component
          className="is-right"
          disabled={true}
          type="submit"
          variant="primary"
        >
          Search
        </Component>
      </Form>
    </Component>
  </div>
</div>
`;

exports[`ClientSearch renderForm should match snapshot 2`] = `
<div>
  <div>
    <Component
      flexColumn={true}
      hasBackground={true}
      hasPadding={true}
    >
      <Component>
        Client Search
      </Component>
      <Form
        className="mb-8"
      >
        <Component
          id="name"
          labelText="Search by name"
          name="name"
          placeholder="Firstname or Surname"
          type="text"
        />
        <Component
          id="address"
          labelText="Search by address"
          name="address"
          placeholder="Streetname, Village, Town or Postcode"
          type="text"
        />
        <Component
          id="identityCheck"
          labelText="Search by ID Status"
          name="identityCheck"
          options={
            Array [
              Object {
                "label": "Please select…",
                "value": "",
              },
              Object {
                "label": "Pass",
                "value": "Pass",
              },
              Object {
                "label": "Fail",
                "value": "Fail",
              },
              Object {
                "label": "Pending",
                "value": "Pending",
              },
              Object {
                "label": "Cancelled",
                "value": "Cancelled",
              },
              Object {
                "label": "Warnings",
                "value": "Warnings",
              },
              Object {
                "label": "Unchecked",
                "value": "Unchecked",
              },
            ]
          }
        />
        <Component
          className="is-right"
          disabled={false}
          type="submit"
          variant="primary"
        >
          Search
        </Component>
      </Form>
    </Component>
  </div>
</div>
`;

exports[`ClientSearch should match a snapshot 1`] = `
<Connect(ErrorBoundary)>
  <Component
    flexColumn={true}
    hasPadding={true}
  >
    <Formik
      initialValues={
        Object {
          "address": "",
          "identityCheck": "",
          "name": "",
        }
      }
      onSubmit={[Function]}
    >
      <Component />
    </Formik>
  </Component>
</Connect(ErrorBoundary)>
`;
